hydroflow/tests/snapshots/surface_fold__fold_static@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_fold.rs
expression: df.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <tt>source_stream(items_recv)</tt>"/]:::pullClass
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1[\"(2v1) <tt>fold::&lt;'static,&gt;(Vec::new(),|mut old: Vec&lt;u32&gt;, mut x: Vec&lt;u32&gt;| {old.append(&amp;mut x);old},)</tt>"/]:::pullClass
    3v1[/"(3v1) <tt>for_each(|v| result_send.send(v).unwrap())</tt>"\]:::pushClass
    2v1--->3v1
end
1v1--->4v1
4v1["(4v1) <tt>handoff</tt>"]:::otherClass
4v1===o2v1

